Revision history for PostScript-Report

0.03   NOT
	- Added background attribute to Container
	- Added detail_background attribute to Report
	- Add PageOrder: Ascend comment
	- Warn in documentation against making padding_bottom too small

0.02   October 22, 2009
	- Builder allows scalar ref as shortcut for Value::Constant
	  and _default overrides default_field_type in a container
	- Warn if a field's value does not exist.
	  Do not warn about existing but undefined values.
	- Added the ps_parameters attribute to Report
	- Updated documentation

0.01   October 20, 2009
	- Initial release